--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
+.DS_Store
 node_modules
+/build
+/.svelte-kit
+/package
 .env
-dist
+.env.*
+!.env.example
+vite.config.js.timestamp-*
+vite.config.ts.timestamp-*
